// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Refova /> renders given wrapped component 1`] = `
<Form
  changed={Array []}
  email="example@email.com"
  errors={
    Object {
      "email": "Domain is not allowed",
      "password": "Password should be at least 6 chars length",
    }
  }
  handleChange={[Function]}
  handleOnlyChange={[Function]}
  password="qwer"
  reset={[Function]}
  resetError={[Function]}
  setValue={[Function]}
  setValues={[Function]}
  username=""
  validateValue={[Function]}
  values={
    Object {
      "email": "example@email.com",
      "password": "qwer",
      "username": "",
    }
  }
/>
`;

exports[`<Refova /> renders given wrapped component when options omitted 1`] = `
<Form
  changed={Array []}
  errors={Object {}}
  handleChange={[Function]}
  handleOnlyChange={[Function]}
  reset={[Function]}
  resetError={[Function]}
  setValue={[Function]}
  setValues={[Function]}
  validateValue={[Function]}
  values={Object {}}
/>
`;
